Made changes to both the navigation and header. Added alignment features to make sure that that they were both centered.

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -59,3 +59,16 @@
     }
   }
 }// home
+
+header{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  border-bottom: 2px dashed #C0C0C0;
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+    h1{
+      padding: 10px 0;
+    }
+}
