--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,25 @@
 // Navigation Styles here
+
+nav{
+    // border: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+    max-width: 800px;
+    margin: 0 auto;
+    border-bottom: 2px dashed #C0C0C0;
+
+    .navigation{
+        border: 1px solid red; 
+        display: flex;
+        width: 40%;
+        
+        a{
+            display: flex;
+            // border: 1px solid black;
+            font-size: 15px;
+            align-items: center;
+            width: 50%;
+            justify-content: space-evenly;
+        }
+    }
+}
